--- a/.eslintrc
+++ b/.eslintrc
@@ -2,32 +2,37 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json",
-    "ecmaVersion": 6,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "modules": true
-    }
+    "ecmaVersion": 2018,
+    "sourceType": "module"
   },
   "env": {
     "es6": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
+  "plugins": ["import", "@typescript-eslint"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "prettier",
+    "prettier/@typescript-eslint",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript"
   ],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": [
-      "warn", {
+      "warn",
+      {
         "allowExpressions": false,
         "allowTypedFunctionExpressions": true,
         "allowHigherOrderFunctions": true
       }
     ],
     "@typescript-eslint/explicit-member-accessibility": [
-      "warn", {
+      "warn",
+      {
         "accessibility": "no-public",
         "overrides": {
           "accessors": "explicit",
@@ -38,24 +43,30 @@
         }
       }
     ],
-    "@typescript-eslint/indent": ["error", 2],
     "@typescript-eslint/no-inferrable-types": [
-      "error", {
+      "error",
+      {
         "ignoreParameters": true
       }
     ],
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-parameter-properties": [
-      "warn", {
+      "warn",
+      {
         "allows": [
-          "private", "protected", "public",
-          "private readonly", "protected readonly", "public readonly"
+          "private",
+          "protected",
+          "public",
+          "private readonly",
+          "protected readonly",
+          "public readonly"
         ]
       }
     ],
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-use-before-define": [
-      "error", {
+      "error",
+      {
         "functions": false,
         "typedefs": false
       }
