--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-jest": "^22.17.0",
     "jest": "^24.9.0"
   },
@@ -41,8 +42,8 @@
     "@typescript-eslint/typescript-estree": "^2.3.3",
     "esm": "^3.2.25",
     "module-alias": "^2.2.2",
-    "yargs": "^14.2.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "yargs": "^14.2.0"
   },
   "_moduleAliases": {
     "~src": "dist",
