--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exercism/javascript-representer",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Exercism AST representer for javascript",
   "repository": "https://github.com/exercism/javascript-representer",
   "author": "Derk-Jan Karrenbeld <derk-jan+github@karrenbeld.info>",
@@ -24,25 +24,26 @@
     "posttest": "yarn lint"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.3",
+    "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.12",
+    "@types/jest": "^24.0.19",
+    "@types/node": "^12.11.1",
     "@types/yargs": "^13.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.3.3",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.19.0",
     "jest": "^24.9.0"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^2.3.3",
-    "@typescript-eslint/typescript-estree": "^2.3.3",
+    "@typescript-eslint/parser": "^2.4.0",
+    "@typescript-eslint/typescript-estree": "^2.4.0",
     "esm": "^3.2.25",
     "module-alias": "^2.2.2",
-    "typescript": "^3.6.3",
+    "typescript": "^3.6.4",
     "yargs": "^14.2.0"
   },
   "_moduleAliases": {
