--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exercism/javascript-representer",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "Exercism AST representer for javascript",
   "repository": "https://github.com/exercism/javascript-representer",
   "author": "Derk-Jan Karrenbeld <derk-jan+github@karrenbeld.info>",
@@ -20,31 +20,31 @@
     "build": "yarn tsc --build src",
     "prepublish": "yarn test",
     "lint": "yarn eslint . --ext ts,js,tsx,jsx,mjs",
-    "test": "yarn build && jest",
-    "posttest": "yarn lint"
+    "test": "yarn build && jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-typescript": "^7.6.0",
-    "@types/jest": "^24.0.19",
-    "@types/node": "^12.11.1",
-    "@types/yargs": "^13.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.16",
+    "@types/yargs": "^15.0.12",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.19.0",
-    "jest": "^24.9.0"
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "jest": "^26.6.3"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^2.4.0",
-    "@typescript-eslint/typescript-estree": "^2.4.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "@typescript-eslint/typescript-estree": "^4.11.0",
     "esm": "^3.2.25",
     "module-alias": "^2.2.2",
-    "typescript": "^3.6.4",
-    "yargs": "^14.2.0"
+    "typescript": "^4.1.3",
+    "yargs": "^16.2.0"
   },
   "_moduleAliases": {
     "~src": "dist",
