--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "semi": false,
   "singleQuote": true,
   "arrowParens": "always",
-  "printWidth": 80
+  "printWidth": 80,
+  "endOfLine": "lf"
 }
