--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,12 @@
 /.vscode
-/.github/labels.yml
-/.github/workflows/sync-labels.yml
 /dist
 /node_modules
 /test/fixtures
 /tmp
+
+# These are org-wide files (https://github.com/exercism/org-wide-files/)
+/.github/labels.yml
+/.github/workflows/sync-labels.yml
+
+/CODE_OF_CONDUCT.md
+/LICENSE
