--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exercism/javascript-representer",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Exercism AST representer for javascript",
   "repository": "https://github.com/exercism/javascript-representer",
   "author": "Derk-Jan Karrenbeld <derk-jan+github@karrenbeld.info>",
@@ -28,31 +28,32 @@
     "test:bare": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/node": "7.13.13",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-typescript": "^7.13.0",
+    "@babel/core": "^7.15.5",
+    "@babel/node": "^7.15.4",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-typescript": "^7.15.0",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/yargs": "^16.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.5",
-    "jest": "^26.6.3"
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.10",
+    "@types/yargs": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "babel-jest": "^27.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.4.0",
+    "jest": "^27.1.0",
+    "prettier": "^2.3.2"
   },
   "dependencies": {
-    "@exercism/static-analysis": "^0.8.1",
-    "@typescript-eslint/parser": "^4.21.0",
-    "@typescript-eslint/typescript-estree": "^4.21.0",
-    "@typescript-eslint/visitor-keys": "^4.21.0",
+    "@exercism/static-analysis": "^0.10.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "@typescript-eslint/typescript-estree": "^4.30.0",
+    "@typescript-eslint/visitor-keys": "^4.30.0",
     "esm": "^3.2.25",
     "module-alias": "^2.2.2",
-    "typescript": "^4.2.4",
-    "yargs": "^16.2.0"
+    "typescript": "^4.4.2",
+    "yargs": "^17.1.1"
   },
   "_moduleAliases": {
     "~src": "dist",
