--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exercism/javascript-representer",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "description": "Exercism AST representer for javascript",
   "repository": "https://github.com/exercism/javascript-representer",
   "author": "Derk-Jan Karrenbeld <derk-jan+github@karrenbeld.info>",
@@ -28,28 +28,29 @@
     "test:bare": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/node": "^7.19.1",
-    "@babel/preset-env": "^7.19.3",
+    "@babel/core": "^7.19.6",
+    "@babel/node": "^7.20.0",
+    "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/jest": "^29.1.1",
-    "@types/node": "^16.11.62",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^16.18.2",
     "@types/yargs": "^17.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "babel-jest": "^29.1.2",
-    "eslint": "^8.24.0",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "babel-jest": "^29.2.2",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.0.4",
-    "jest": "^29.1.2",
+    "eslint-plugin-jest": "^27.1.3",
+    "jest": "^29.2.2",
     "prettier": "^2.7.1"
   },
   "dependencies": {
     "@exercism/static-analysis": "^0.12.0",
-    "@typescript-eslint/parser": "^5.38.1",
-    "@typescript-eslint/typescript-estree": "^5.38.1",
-    "@typescript-eslint/visitor-keys": "^5.38.1",
+    "@typescript-eslint/parser": "^5.41.0",
+    "@typescript-eslint/typescript-estree": "^5.41.0",
+    "@typescript-eslint/visitor-keys": "^5.41.0",
+    "astring": "^1.8.3",
     "esm": "^3.2.25",
     "module-alias": "^2.2.2",
     "typescript": "^4.8.4",
